# blog

./: .gitignore  Makefile  develop_server.sh  fabfile.py  pelicanconf.py  prepare_article.py  publishconf.py  pyproject.toml  setup.py
bashlexer/: __init__.py
content/: Monty-python-random-parody.md  Web-crawling-with-scrapy.md  about-letting-go.md  advent-of-code-day-3.md  allocating-unbounded-resources-to-a-kubernetes-pod.md  build-your-own-tools.md  cant-enough-be-enough.md  celery-best-practices-and-common-pitfalls.md  celery-best-practices.md  cleanup-dungeondraft-tag-list.md  create-gstreamer-webcam-manager.md  decouverte-docker-command-line.md  diy-book-of-terrains.md  enough-makefile-to-be-dangerous.md  essential-tools-p1-discovering-terminal.md  essential-tools-p2-text-processing-shell.md  essential-tools-p3-shell-building-blocks.md  essential-tools-p4-customizing-shell.md  essential-tools-p5-shell-productivity.md  fail-pr-checks-with-do-not-merge-label.md  guitar-pro-on-fedora.md  how-to-setup-a-personal-wireguard-vpn.md  jour-j-et-pantalon-moule-fesses.md  julie.md  keeping-an-eye-on-that-river.md  managing-my-infra-like-it-s-2019.md  merging-mp3-into-audiobook.md  metaprocrastinating-writing-a-text-editor.md  monitoring-sonar-panel-power-production.md  mothership-fr-character-sheet.md  my-diy-proposal.md  my-dm-toolkit.md  my-no-knead-bread-recipe.md  n-step-plan.md  neapolitan-pizza-recipe.md  on-meritocracy-identity-and-context.md  on-working-from-home.md  ovfbhf-cncn.md  pain-au-levain-2e-essai.md  pain-au-levain-premier-essai.md  (+17 more)
jinja/: note.j2  (+1 more)
(+124 files in other folders)
