[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Personal blog"
authors = ["Balthazar Rouberol <br@imap.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.6.0"
Markdown = "^3.3.4"
Pygments = "^2.9.0"
Pillow = "^9.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pygments.lexers"]
"bash" = "bashlexer:ExtendedBashLexer"
