[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Personal blog"
authors = ["Balthazar Rouberol <br@imap.cc>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.6.0"
Markdown = "^3.3.4"
Pygments = "^2.9.0"
Pillow = "^10.0"

[poetry.group.dev.dependencies]
black = { version = "^22.3.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pygments.lexers"]
"bash" = "bashlexer:ExtendedBashLexer"
